virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api
spec:
  hosts:
  - "*"
  gateways:
  - api-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /foo
    route:
    - destination:
        host: api
        port:
          number: 5000
